minio-k8s/tenant-base.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: minio-tenant
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-operator-ingress
  namespace: minio-tenant
  annotations:
    ingress.kubernetes.io/backend-protocol: "HTTPS"
  labels:
    app.kubernetes.io/instance: minio-operator
    app.kubernetes.io/name: operator
spec:
  ingressClassName: contour
  tls:
  - hosts:
      - minio-operator.corp.internal
    secretName: minio-operator-cert-tls
  rules:
    - host: minio-operator.corp.internal
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: myminio-console
              port:
                number: 9443
